04_Netwoking + Load Balancing/Beispiel Lösung/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    #    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: hello-kubernetes-np
      port:
        number: 80
