04_Netwoking + Load Balancing/Beispiel Lösung/app_internal_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    cloud.google.com/backend-config: '{"default": "hello-backendconfig"}'
    kubernetes.io/ingress.class: gce-internal
spec:
  defaultBackend:
    service:
      name: hello-kubernetes-np
      port:
        number: 80
