04_Netwoking + Load Balancing/Beispiel Lösung/policy_allow_lb_health_checks.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-lb-health-check
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: 35.191.0.0/16
  - from:
    - ipBlock:
        cidr: 130.211.0.0/22
